kubernetes/tutorial/webhook-configuration.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: opa-validating-webhook
webhooks:
  - name: validating-webhook.openpolicyagent.org
    namespaceSelector:
      matchExpressions:
      - key: openpolicyagent.org/webhook
        operator: NotIn
        values:
        - ignore
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyRENDQVpRQ0NRQ3dObDJGNzdFQWt6QU5CZ2txaGtpRzl3MEJBUXNGQURBWE1SVXdFd1lEVlFRRERBeGgKWkcxcGMzTnBiMjVmWTJFd0lCY05NakF3TVRJeE1ETTBNVEUzV2hnUE1qSTVNekV4TURVd016UXhNVGRhTUJjeApGVEFUQmdOVkJBTU1ER0ZrYldsemMybHZibDlqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU1RblhzcjJDWGg2YVB4WnAyUjlObHN1SThrUUhBRlJ4V3VXeVo5R3BXNXQ4NjE2WDdSMzZWQlMKNDZsdlNOR0E5T21ONm5kSCtmTzdhYmpybVJ3dXZiMzBQd1JnS3JOQm9HVmxEK3pMSHpIT2pOczBkdy9RL1lmSwo4bjVNc0NRajFC [...]
      service:
        namespace: opa
        name: opa
